refactor(api): ♻️ 优化Yarn队列服务接口及实现
重构ClusterYarnQueueService接口，调整返回类型及异常处理：
- 将listByPage返回类型从Result改为PageResult
- saveQueue和refreshQueues方法改为void并抛出BusinessException
- 移除接口注释中的作者信息

实现类同步调整：
- 方法实现适配接口变更
- 统一使用BusinessException进行错误处理
- 增强refreshQueues方法的异常捕获处理